--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/d4410a7a65.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
     <title>Portfolio Web Page</title>
   </head>
   <body>
     <h1>Hello World</h1>
+    <i class="fa-brands fa-instagram"></i>
   </body>
 </html>
