--- a/index.html
+++ b/index.html
@@ -22,7 +22,37 @@
     <title>Portfolio Web Page</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <i class="fa-brands fa-instagram"></i>
+    <nav class="navbar navbar-expand-lg navbar-green">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">PAU</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">My work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Talk to me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
