--- a/index.html
+++ b/index.html
@@ -36,23 +36,55 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active px-5" aria-current="page" href="#"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About me</a>
+              <a class="nav-link px-5" href="#">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">My work</a>
+              <a class="nav-link px-5" href="#">My work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Talk to me</a>
+              <a class="nav-link px-5" href="#">Talk to me</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+    <div class="container">
+      <div class="d-flex justify-content-around">
+        <div class="row">
+          <div class="col-sm-6 py-5">
+            <h1>I'm Paulina Cruz</h1>
+            <br />
+            <h2>front-end developer</h2>
+            <p>
+              I want to help you create
+              <br />
+              and bring to life the project
+              <br />
+              you have envisioned by
+              <br />
+              trusting my abilities to do so
+            </p>
+          </div>
+          <div class="col-sm-6 py-5">
+            <img
+              src="images/Paulina.jpg"
+              alt="Paulina-faceshot-pic"
+              width="200"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
