--- a/index.html
+++ b/index.html
@@ -60,29 +60,28 @@
       </div>
     </nav>
     <div class="container">
-      <div class="d-flex justify-content-around">
-        <div class="row">
-          <div class="col-sm-6 py-5">
-            <h1>I'm Paulina Cruz</h1>
+      <div class="row justify-content-center ms-5">
+        <div class="col-sm-5 py-5">
+          <h1>I'm Paulina Cruz</h1>
+          <h2>front-end developer</h2>
+          <br />
+          <p>
+            I want to help you create
             <br />
-            <h2>front-end developer</h2>
-            <p>
-              I want to help you create
-              <br />
-              and bring to life the project
-              <br />
-              you have envisioned by
-              <br />
-              trusting my abilities to do so
-            </p>
-          </div>
-          <div class="col-sm-6 py-5">
-            <img
-              src="images/Paulina.jpg"
-              alt="Paulina-faceshot-pic"
-              width="200"
-            />
-          </div>
+            and bring to life the project
+            <br />
+            you have envisioned by
+            <br />
+            trusting my abilities to do so
+          </p>
+        </div>
+        <div class="col-md-auto"></div>
+        <div class="col-sm-5 py-5">
+          <img
+            src="images/Paulina.png"
+            alt="Paulina-faceshot-pic"
+            width="200"
+          />
         </div>
       </div>
     </div>
