--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
       src="https://kit.fontawesome.com/d4410a7a65.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&family=Playwrite+DE+Grund:wght@100..400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/portfolio.css" />
     <title>Portfolio Web Page</title>
   </head>
@@ -66,13 +78,13 @@
           <h2>front-end developer</h2>
           <br />
           <p>
-            I want to help you create
+            I want to bring to life
             <br />
-            and bring to life the project
+            the project you have been
             <br />
-            you have envisioned by
+            dreaming of and won't stop
             <br />
-            trusting my abilities to do so
+            until you absolutely love it
           </p>
         </div>
         <div class="col-md-auto"></div>
@@ -82,6 +94,19 @@
             alt="Paulina-faceshot-pic"
             width="200"
           />
+        </div>
+      </div>
+    </div>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <button type="button" class="btn btn-success">Instagram</button>
+        </div>
+        <div class="col">
+          <button type="button" class="btn btn-success">LinkedIn</button>
+        </div>
+        <div class="col">
+          <button type="button" class="btn btn-success">Facebook</button>
         </div>
       </div>
     </div>
