--- a/index.html
+++ b/index.html
@@ -100,13 +100,19 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <button type="button" class="btn btn-success">Instagram</button>
+          <button type="button" class="btn custom-btn">
+            <i class="fa-brands fa-instagram"></i>
+          </button>
         </div>
         <div class="col">
-          <button type="button" class="btn btn-success">LinkedIn</button>
+          <button type="button" class="btn custom-btn">
+            <i class="fa-brands fa-linkedin"></i>
+          </button>
         </div>
         <div class="col">
-          <button type="button" class="btn btn-success">Facebook</button>
+          <button type="button" class="btn custom-btn">
+            <i class="fa-brands fa-facebook"></i>
+          </button>
         </div>
       </div>
     </div>
