--- a/index.html
+++ b/index.html
@@ -101,18 +101,41 @@
       <div class="row">
         <div class="col">
           <button type="button" class="btn custom-btn">
-            <i class="fa-brands fa-instagram"></i>
+            <a target="_blank" href="https://www.instagram.com/paucruz5/">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
           </button>
         </div>
         <div class="col">
           <button type="button" class="btn custom-btn">
-            <i class="fa-brands fa-linkedin"></i>
+            <a
+              target="_blank"
+              href="https://www.linkedin.com/in/paulinamarincruz/"
+            >
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
           </button>
         </div>
         <div class="col">
           <button type="button" class="btn custom-btn">
-            <i class="fa-brands fa-facebook"></i>
+            <a target="_blank" href="https://www.facebook.com/paucruz5"
+              ><i class="fa-brands fa-facebook"> </i>
+            </a>
           </button>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-6"></div>
+        <div class="col-6">
+          <h2>Poem searcher</h2>
+          <p>
+            Using AI I manage to creater a searcher that looks for poems written
+            only by women. You just have to write the theme of the poem and the
+            searcher will show you a beautiful poem.
+          </p>
+          <a href="" class="btn btn-link">Poem Searcher</a>
         </div>
       </div>
     </div>
