added web pages

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <div class="navbar-toggler-icon"></div>
         </button>
         <div
           class="collapse navbar-collapse justify-content-center"
@@ -101,14 +101,8 @@
       <div class="row">
         <div class="col">
           <button type="button" class="btn custom-btn">
-            <a target="_blank" href="https://www.instagram.com/paucruz5/">
-              <i class="fa-brands fa-instagram"></i>
-            </a>
-          </button>
-        </div>
-        <div class="col">
-          <button type="button" class="btn custom-btn">
             <a
+              class="social-net"
               target="_blank"
               href="https://www.linkedin.com/in/paulinamarincruz/"
             >
@@ -118,8 +112,22 @@
         </div>
         <div class="col">
           <button type="button" class="btn custom-btn">
-            <a target="_blank" href="https://www.facebook.com/paucruz5"
-              ><i class="fa-brands fa-facebook"> </i>
+            <a
+              class="social-net"
+              target="_blank"
+              href="https://www.facebook.com/paucruz5"
+              ><i class="fa-brands fa-facebook"></i>
+            </a>
+          </button>
+        </div>
+        <div class="col">
+          <button type="button" class="btn custom-btn">
+            <a
+              class="social-net"
+              target="_blank"
+              href="https://www.instagram.com/paucruz5/"
+            >
+              <i class="fa-brands fa-instagram"></i>
             </a>
           </button>
         </div>
@@ -127,15 +135,85 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6"></div>
+        <div class="col-1"></div>
+        <div class="col-5">
+          <img
+            class="poem-picture py-5"
+            src="images/women-poems.png"
+            alt="Web page that finds poems written by women"
+            width="430"
+          />
+        </div>
         <div class="col-6">
-          <h2>Poem searcher</h2>
-          <p>
-            Using AI I manage to creater a searcher that looks for poems written
-            only by women. You just have to write the theme of the poem and the
-            searcher will show you a beautiful poem.
+          <h3 class="mt-5 title-page">POEM SEARCHER</h2>
+          <p class="me-2">
+            I manage to create a searcher that finds poems written only by
+            women, using AI. You just have to write the theme of the poem and
+            the searcher will show you a beautiful poem written by a woman.
           </p>
-          <a href="" class="btn btn-link">Poem Searcher</a>
+          <a
+            href="https://women-poems-searcher.netlify.app/"
+            target="_blank"
+            class="btn btn-link"
+            >Poem Searcher</a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-5">
+          <h3 class="mt-3 title-page">WEATHER APP</h2>
+          <p>
+            This web page shows you the weather of the week and time of the city
+            you currently are.
+            <br />
+            It will also show you the weather and time
+            <br />
+            of any city in the world.
+          </p>
+          <a
+            href="https://weather-pc.netlify.app/"
+            target="_blank"
+            class="btn btn-link"
+            >Weather App</a
+          >
+        </div>
+        <div class="col-6">
+          <img
+            class="weather-picture py-3"
+            src="images/weather-app.png"
+            alt="Web page that shows you the weather in any city"
+            width="430"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-5">
+          <img
+            class="clock-picture py-5"
+            src="images/world-clock.png"
+            alt="Web page that shows the time of a few cities"
+            width="430"
+          />
+        </div>
+        <div class="col-6">
+          <h3 class="mt-5 title-page">WORLD CLOCK</h2>
+          <p class="me-2">
+            I manage to create a searcher that finds poems written only by
+            women, using AI. You just have to write the theme of the poem and
+            the searcher will show you a beautiful poem written by a woman.
+          </p>
+          <a
+            href="https://world-clock-pc.netlify.app/index.html"
+            target="_blank"
+            class="btn btn-link"
+            >World clock</a
+          >
         </div>
       </div>
     </div>
