--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           />
         </div>
         <div class="col-6">
-          <h3 class="mt-5 title-page">POEM SEARCHER</h2>
+          <h3 class="mt-5 title-page">POEM SEARCHER</h3>
           <p class="me-2">
             I manage to create a searcher that finds poems written only by
             women, using AI. You just have to write the theme of the poem and
@@ -164,7 +164,7 @@
       <div class="row">
         <div class="col-1"></div>
         <div class="col-5">
-          <h3 class="mt-3 title-page">WEATHER APP</h2>
+          <h3 class="mt-3 title-page">WEATHER APP</h3>
           <p>
             This web page shows you the weather of the week and time of the city
             you currently are.
@@ -202,11 +202,11 @@
           />
         </div>
         <div class="col-6">
-          <h3 class="mt-5 title-page">WORLD CLOCK</h2>
-          <p class="me-2">
-            I manage to create a searcher that finds poems written only by
-            women, using AI. You just have to write the theme of the poem and
-            the searcher will show you a beautiful poem written by a woman.
+          <h3 class="mt-5 title-page">WORLD CLOCK</h3>
+          <p class="me-5">
+            This web page will show you the time 9 cities all over the world. 8
+            of them are already set and the last one is the time of your current
+            location. Is a basic design but functional.
           </p>
           <a
             href="https://world-clock-pc.netlify.app/index.html"
