--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Paulina Cruz is a Front-end developer and this page shows her work"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,12 +35,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Portfolio Web Page</title>
+    <title>Pau's home page</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-green">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">PAU</a>
+    <nav class="navbar navbar-expand-md navbar-green fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">PAU</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -54,45 +58,44 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active px-5" aria-current="page" href="#"
-                >Home</a
+              <a
+                class="nav-link active px-5"
+                aria-current="page"
+                href="index.html"
+                >Home page</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link px-5" href="#">About me</a>
+              <a class="nav-link px-5" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-5" href="#">My work</a>
+              <a class="nav-link px-5" href="/work.html">My work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-5" href="#">Talk to me</a>
+              <a class="nav-link px-5" href="/contact.html">Talk to me</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="container">
-      <div class="row justify-content-center ms-5">
-        <div class="col-sm-5 py-5">
-          <h1>I'm Paulina Cruz</h1>
+    <div class="container hero-margin pau-intro">
+      <div class="row ms-3 justify-content-center">
+        <div class="col-md text-center">
+          <h1>Paulina Cruz</h1>
           <h2>front-end developer</h2>
           <br />
-          <p>
-            I want to bring to life
-            <br />
-            the project you have been
-            <br />
-            dreaming of and won't stop
-            <br />
-            until you absolutely love it
+          <p class="justified-text-left intro-text">
+            My aim is to create engaging digital experiences that delight users
+            and meet business goals. I thrive on turning complex ideas into
+            visually appealing and intuitive interfaces.
           </p>
         </div>
-        <div class="col-md-auto"></div>
-        <div class="col-sm-5 py-5">
+        <div class="col-md ms-5">
           <img
+            class="img-fluid mt-2 face-shot p-1 shadow rounded"
             src="images/Paulina.png"
-            alt="Paulina-faceshot-pic"
-            width="200"
+            alt="Paulina-faceshot"
+            width="220"
           />
         </div>
       </div>
@@ -105,8 +108,7 @@
               class="social-net"
               target="_blank"
               href="https://www.linkedin.com/in/paulinamarincruz/"
-            >
-              <i class="fa-brands fa-linkedin"></i>
+              ><i class="fa-brands fa-linkedin"></i>
             </a>
           </button>
         </div>
@@ -126,94 +128,98 @@
               class="social-net"
               target="_blank"
               href="https://www.instagram.com/paucruz5/"
-            >
-              <i class="fa-brands fa-instagram"></i>
+              ><i class="fa-brands fa-instagram"></i>
             </a>
           </button>
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-1"></div>
-        <div class="col-5">
+
+    <div class="container work-examples">
+      <div class="row my-5 justify-content-center">
+        <div class="col-lg">
           <img
-            class="poem-picture py-5"
             src="images/women-poems.png"
             alt="Web page that finds poems written by women"
-            width="430"
+            width="440"
+            class="work-image p-1 shadow rounded"
           />
         </div>
-        <div class="col-6">
-          <h3 class="mt-5 title-page">POEM SEARCHER</h3>
-          <p class="me-2">
-            I manage to create a searcher that finds poems written only by
-            women, using AI. You just have to write the theme of the poem and
-            the searcher will show you a beautiful poem written by a woman.
+        <div class="col-lg text-start">
+          <div class="text-center text-lg-start">
+            <h3 class="title-page">POEM SEARCHER</h3>
+          </div>
+          <p class="justified-text-right">
+            Choose the theme of the poem, in any language you'd like and, using
+            AI, the searcher will show you a beautiful poem written by any woman
+            in the world.
           </p>
-          <a
-            href="https://women-poems-searcher.netlify.app/"
-            target="_blank"
-            class="btn btn-link"
-            >Poem Searcher</a
-          >
+          <div class="page-button text-center text-lg-start">
+            <a
+              href="https://women-poems-searcher.netlify.app/"
+              target="_blank"
+              class="btn btn-link"
+              >Poem Searcher
+            </a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-1"></div>
-        <div class="col-5">
-          <h3 class="mt-3 title-page">WEATHER APP</h3>
-          <p>
-            This web page shows you the weather of the week and time of the city
-            you currently are.
-            <br />
-            It will also show you the weather and time
-            <br />
-            of any city in the world.
+
+      <div class="row my-5 justify-content-center">
+        <div class="col-lg text-end order-lg-0 order-1">
+          <div class="text-center text-lg-end">
+            <h3 class="title-page">WEATHER APP</h3>
+          </div>
+          <p class="justified-text-left">
+            Choose any city in the world and the searcher will show this week's
+            weather in that city. It also shows the weather, date and time of
+            your current location.
           </p>
-          <a
-            href="https://weather-pc.netlify.app/"
-            target="_blank"
-            class="btn btn-link"
-            >Weather App</a
-          >
+          <div class="page-button text-center text-lg-end">
+            <a
+              href="https://weather-pc.netlify.app/"
+              target="_blank"
+              class="btn btn-link"
+              >Weather App
+            </a>
+          </div>
         </div>
-        <div class="col-6">
+        <div class="col-lg order-lg-1 order-0">
           <img
-            class="weather-picture py-3"
             src="images/weather-app.png"
             alt="Web page that shows you the weather in any city"
             width="430"
+            class="work-image p-1 shadow rounded"
           />
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-1"></div>
-        <div class="col-5">
+
+      <div class="row my-5 justify-content-center">
+        <div class="col-lg">
           <img
-            class="clock-picture py-5"
             src="images/world-clock.png"
             alt="Web page that shows the time of a few cities"
-            width="430"
+            width="440"
+            class="work-image p-1 shadow rounded"
           />
         </div>
-        <div class="col-6">
-          <h3 class="mt-5 title-page">WORLD CLOCK</h3>
-          <p class="me-5">
-            This web page will show you the time 9 cities all over the world. 8
-            of them are already set and the last one is the time of your current
-            location. Is a basic design but functional.
+        <div class="col-lg text-start">
+          <div class="text-center text-lg-start">
+            <h3 class="title-page">WORLD CLOCK</h3>
+          </div>
+          <p class="justified-text-right">
+            This searcher shows you the full date and time in a digital clock,
+            of nine default cities all around the world. One of those cities is
+            your current location.
           </p>
-          <a
-            href="https://world-clock-pc.netlify.app/index.html"
-            target="_blank"
-            class="btn btn-link"
-            >World clock</a
-          >
+          <div class="page-button text-center text-lg-start">
+            <a
+              href="https://world-clock-pc.netlify.app/index.html"
+              target="_blank"
+              class="btn btn-link"
+              >World clock
+            </a>
+          </div>
         </div>
       </div>
     </div>
