fixed image place

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <div class="container work-examples">
       <div class="row my-5 justify-content-center">
-        <div class="col-lg">
+        <div class="col-lg text-end">
           <img
             src="images/women-poems.png"
             alt="Web page that finds poems written by women"
@@ -195,7 +195,7 @@
       </div>
 
       <div class="row my-5 justify-content-center">
-        <div class="col-lg">
+        <div class="col-lg text-end">
           <img
             src="images/world-clock.png"
             alt="Web page that shows the time of a few cities"
