--- a/index.html
+++ b/index.html
@@ -223,5 +223,8 @@
         </div>
       </div>
     </div>
+    <button class="show-work">
+      <a href="work.html" target="_self">More of my work </a>
+    </button>
   </body>
 </html>
