--- a/about.html
+++ b/about.html
@@ -75,6 +75,62 @@
         </div>
       </div>
     </nav>
-    <h1 class="hero-margin">about</h1>
+    <div class="container hero-section">
+      <div class="row ms-3 justify-content-center">
+        <div class="col-md text-center">
+          <h1>Paulina Cruz</h1>
+          <h2><small>front-end developer based in Mexico</small></h2>
+          <br />
+          <p class="justified-text-left intro-text">
+            I always loved technology, since I was a little girl in a little
+            town. My curiosity for it made me the perfect self taught candidate.
+            I did a front-end course in SheCodes and it changed my life. I felt
+            in love with coding and I plan to keep learning more about it.
+          </p>
+        </div>
+        <div class="col-md ms-5">
+          <img
+            class="img-fluid mt-2 face-shot p-1 shadow rounded"
+            src="images/Paulina.png"
+            alt="Paulina-faceshot"
+            width="220"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <button type="button" class="btn custom-btn">
+            <a
+              class="social-net"
+              target="_blank"
+              href="https://www.linkedin.com/in/paulinamarincruz/"
+              ><i class="fa-brands fa-linkedin"></i>
+            </a>
+          </button>
+        </div>
+        <div class="col">
+          <button type="button" class="btn custom-btn">
+            <a
+              class="social-net"
+              target="_blank"
+              href="https://www.facebook.com/paucruz5"
+              ><i class="fa-brands fa-facebook"></i>
+            </a>
+          </button>
+        </div>
+        <div class="col">
+          <button type="button" class="btn custom-btn">
+            <a
+              class="social-net"
+              target="_blank"
+              href="https://www.instagram.com/paucruz5/"
+              ><i class="fa-brands fa-instagram"></i>
+            </a>
+          </button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
