--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
       </div>
     </nav>
-    <div class="container hero-margin pau-intro">
+    <div class="container hero-section">
       <div class="row ms-3 justify-content-center">
         <div class="col-md text-center">
           <h1>Paulina Cruz</h1>
@@ -223,7 +223,7 @@
         </div>
       </div>
     </div>
-    <button class="show-work">
+    <button class="show-work shadow rounded">
       <a href="work.html" target="_self">More of my work </a>
     </button>
   </body>
