--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
     </nav>
     <div class="container hero-section">
-      <div class="row ms-3 justify-content-center">
+      <div class="row justify-content-center">
         <div class="col-md text-center">
           <h1>Paulina Cruz</h1>
           <h2>front-end developer</h2>
