Added information about me

--- a/index.html
+++ b/index.html
@@ -223,8 +223,25 @@
         </div>
       </div>
     </div>
-    <button class="show-work shadow rounded">
-      <a href="work.html" target="_self">More of my work </a>
-    </button>
+
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <button class="show-work shadow rounded">
+            <a href="contact.html" target="_self">Let's work together</a>
+          </button>
+        </div>
+        <div class="col">
+          <button class="show-work shadow rounded">
+            <a href="work.html" target="_self">More of my work</a>
+          </button>
+        </div>
+        <div class="col">
+          <button class="show-work shadow rounded">
+            <a href="about.html" target="_self">Get to know about me</a>
+          </button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
