--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link px-5" aria-current="page" href="/index.html"
-                >Home</a
+                >Home page</a
               >
             </li>
             <li class="nav-item">
@@ -76,7 +76,7 @@
       </div>
     </nav>
     <div class="container hero-section">
-      <div class="row ms-3 justify-content-center">
+      <div class="row justify-content-center">
         <div class="col-md text-center">
           <h1>Paulina Cruz</h1>
           <h2><small>front-end developer based in Mexico</small></h2>
@@ -91,7 +91,7 @@
         <div class="col-md ms-5">
           <img
             class="img-fluid mt-2 face-shot p-1 shadow rounded"
-            src="images/Paulina.png"
+            src="images/pau&luca.JPEG"
             alt="Paulina-faceshot"
             width="220"
           />
@@ -128,6 +128,109 @@
               href="https://www.instagram.com/paucruz5/"
               ><i class="fa-brands fa-instagram"></i>
             </a>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="about-myself">
+      <div>
+        <h1>About my work</h1>
+        <h2>What exactly do I do?</h2>
+        <p>
+          <li class="mb-1">
+            Give me your dream web page design and I will create it
+          </li>
+          <li class="mb-1">
+            I can give you some pointer on where to improve but it's up to you
+            if you take them
+          </li>
+          <li class="mb-1">I use Visual Studio Code</li>
+          <li class="mb-1">JavaScript is the language I use</li>
+        </p>
+      </div>
+      <br />
+      <div>
+        <h1>A little about me</h1>
+        <h2>The basics...</h2>
+        <p>
+          <li class="mb-1">
+            I'm 30 years old. Born in August, 1994. Of course I'm a Leo♌🔥
+          </li>
+          <li class="mb-1">I'm Mexican-Cuban</li>
+          <li class="mb-1">
+            I studied front-end developing in
+            <span class="shecodes">
+              <a href="https://www.shecodes.io/" target="_blank"
+                >SheCodes</a
+              ></span
+            >
+          </li>
+          <li class="mb-1">I also studied cinematography</li>
+          <li class="mb-1">I have 10 years of customer service experience</li>
+          <li class="mb-1">
+            My personality type is
+            <span class="personality">
+              <a
+                href="https://www.16personalities.com/enfj-personality"
+                target="_blank"
+                >ENFJ-A (Protagonist)</a
+              ></span
+            >
+          </li>
+          <li class="mb-1">
+            I speak 3 languages:
+            <ul>
+              <li class="my-1">Spanish (native)</li>
+              <li class="mb-1">English (competitive)</li>
+              <li class="mb-1">Portuguese (intermediate-advance)</li>
+            </ul>
+          </li>
+        </p>
+      </div>
+      <br />
+      <div>
+        <h1>On a more personal note</h1>
+        <h2>It's important for me that you know...</h2>
+        <p>
+          <li class="mb-1">I'm part of the LGBTQI+ community</li>
+          <li class="mb-1">I'm a feminist, anti-racist and activist</li>
+        </p>
+      </div>
+    </div>
+
+    <div class="text-center">
+      <h1 class="recommendations">RECOMMENDATIONS</h1>
+      <img
+        class="my-1 work-image p-1 shadow rounded"
+        src="/images/zoha-recommendation.png"
+        alt=""
+        width="800"
+      />
+      <img
+        class="my-3 work-image p-1 shadow rounded"
+        src="/images/katy-recommendation.png"
+        alt=""
+        width="800"
+      />
+      <img
+        class="my-1 work-image p-1 shadow rounded"
+        src="/images/adam-recommendation.png"
+        alt=""
+        width="800"
+      />
+    </div>
+
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <button class="show-work shadow rounded">
+            <a href="contact.html" target="_self">Let's work together</a>
+          </button>
+        </div>
+        <div class="col">
+          <button class="show-work shadow rounded">
+            <a href="work.html" target="_self">More of my work</a>
           </button>
         </div>
       </div>
