--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link px-5" aria-current="page" href="/index.html"
-                >Home</a
+                >Home page</a
               >
             </li>
             <li class="nav-item">
