Added more description

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
         </div>
         <div class="col-md ms-5">
           <img
-            class="img-fluid mt-2 face-shot p-1 shadow rounded"
+            class="img-fluid mt-2 ms-5 face-shot p-1 shadow rounded"
             src="images/pau&luca.JPEG"
             alt="Paulina-faceshot"
             width="220"
@@ -135,30 +135,32 @@
 
     <div class="about-myself">
       <div>
-        <h1>About my work</h1>
-        <h2>What exactly do I do?</h2>
+        <h1 class="fs-3">About my work</h1>
+        <h2 class="fs-5">What exactly do I do?</h2>
         <p>
-          <li class="mb-1">
-            Give me your dream web page design and I will create it
+          <li class="mb-1 fs-5">
+            Give me the design of your dream web page and I will create it
           </li>
-          <li class="mb-1">
-            I can give you some pointer on where to improve but it's up to you
+          <li class="mb-1 fs-5">
+            I can give you some pointers on where to improve but it's up to you
             if you take them
           </li>
-          <li class="mb-1">I use Visual Studio Code</li>
-          <li class="mb-1">JavaScript is the language I use</li>
+          <li class="mb-1 fs-5">I use Visual Studio Code</li>
+          <li class="mb-1 fs-5">I use JavaScript</li>
+          <li class="mb-1 fs-5">I use <a href="#" id="inclusiveLanguage">inclusive language</a></li>
         </p>
       </div>
+
       <br />
       <div>
-        <h1>A little about me</h1>
-        <h2>The basics...</h2>
+        <h1 class="fs-3">A little about me</h1>
+        <h2 class="fs-5">The basics...</h2>
         <p>
-          <li class="mb-1">
+          <li class="mb-1 fs-5">
             I'm 30 years old. Born in August, 1994. Of course I'm a Leo♌🔥
           </li>
-          <li class="mb-1">I'm Mexican-Cuban</li>
-          <li class="mb-1">
+          <li class="mb-1 fs-5">I'm Mexican-Cuban</li>
+          <li class="mb-1 fs-5">
             I studied front-end developing in
             <span class="shecodes">
               <a href="https://www.shecodes.io/" target="_blank"
@@ -166,9 +168,11 @@
               ></span
             >
           </li>
-          <li class="mb-1">I also studied cinematography</li>
-          <li class="mb-1">I have 10 years of customer service experience</li>
-          <li class="mb-1">
+          <li class="mb-1 fs-5">I also studied cinematography</li>
+          <li class="mb-1 fs-5">
+            I have 10 years of customer service experience
+          </li>
+          <li class="mb-1 fs-5">
             My personality type is
             <span class="personality">
               <a
@@ -178,29 +182,102 @@
               ></span
             >
           </li>
-          <li class="mb-1">
+          <li class="mb-1 fs-5">
             I speak 3 languages:
             <ul>
-              <li class="my-1">Spanish (native)</li>
-              <li class="mb-1">English (competitive)</li>
-              <li class="mb-1">Portuguese (intermediate-advance)</li>
+              <li class="my-1 fs-6">Spanish (native)</li>
+              <li class="mb-1 fs-6">English (competitive)</li>
+              <li class="mb-1 fs-6">Portuguese (intermediate-advance)</li>
             </ul>
           </li>
         </p>
       </div>
+
       <br />
-      <div>
-        <h1>On a more personal note</h1>
-        <h2>It's important for me that you know...</h2>
-        <p>
-          <li class="mb-1">I'm part of the LGBTQI+ community</li>
-          <li class="mb-1">I'm a feminist, anti-racist and activist</li>
-        </p>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1 class="fs-3">Work related skills</h1>
+            <h2 class="fs-5"></h2>
+            <p>
+              <li class="mb-1 fs-6">Leadership & proactive</li>
+              <li class="mb-1 fs-6">Polyvalent & efficient</li>
+              <li class="mb-1 fs-6">Multitasker & adaptable</li>
+              <li class="mb-1 fs-6">Critical thinking & Conceptual thinking</li>
+              <li class="mb-1 fs-6">Problem solver & decision making</li>
+              <li class="mb-1 fs-6">Detail oriented & succinct</li>
+              <li class="mb-1 fs-6">Independent & team player</li>
+              <li class="mb-1 fs-6">Fast & easy learner</li>
+              <li class="mb-1 fs-6">Creative & ingenious</li>
+              <li class="mb-1 fs-6">Assertive communication & eloquent</li>
+              <li class="mb-1 fs-6">Writing communication & teaching skills</li>
+              <li class="mb-1 fs-6">Public speaking & active listener</li>
+              <li class="mb-1 fs-6">Mistake-learner & ambitious</li>
+              <li class="mb-1 fs-6">Deductive & inductive reasoning</li>
+              <li class="mb-1 fs-6">Negotiation & persuasion</li>
+              <li class="mb-1 fs-6">Patient & persevering</li>
+              <li class="mb-1 fs-6">Disciplined & organized</li>
+              <li class="mb-1 fs-6">Stress & anger management</li>
+              <li class="mb-1 fs-6">Language learning & good memory</li>
+              <li class="mb-1 fs-6">Top-notch customer service</li>
+              <li class="mb-1 fs-6">
+                Comfortable with asking for help & asking questions
+              </li>
+              <li class="mb-1 fs-6">
+                Comfortable when someone points out my mistakes
+              </li>
+              <li class="mb-1 fs-6">Comfortable with working under pressure</li>
+            </p>
+          </div>
+          <div class="col">
+            <h1 class="fs-3">Personality traits</h1>
+            <h2 class="fs-5"></h2>
+            <p>
+              <li class="mb-1 fs-6">Practical & rational</li>
+              <li class="mb-1 fs-6">Resourceful & reliable</li>
+              <li class="mb-1 fs-6">Confident & genuine</li>
+              <li class="mb-1 fs-6">Grateful & generous</li>
+              <li class="mb-1 fs-6">Outspoken & advocate</li>
+              <li class="mb-1 fs-6">Decisive & responsible</li>
+              <li class="mb-1 fs-6">Meticulous & tidy</li>
+              <li class="mb-1 fs-6">Punctual & curious</li>
+              <li class="mb-1 fs-6">Empathic & compassionate</li>
+              <li class="mb-1 fs-6">Courageous & resilient</li>
+              <li class="mb-1 fs-6">Honest & loyal</li>
+              <li class="mb-1 fs-6">Rightful & fair</li>
+              <li class="mb-1 fs-6">Respectful & tolerant</li>
+              <li class="mb-1 fs-6">Helpful & friendly</li>
+              <li class="mb-1 fs-6">Conscientious & thoughtful</li>
+              <li class="mb-1 fs-6">Optimistic & great attitude</li>
+              <li class="mb-1 fs-6">Open-minded & motivated</li>
+              <li class="mb-1 fs-6">Kind-hearted & caring</li>
+              <li class="mb-1 fs-6">Easygoing & forgiving</li>
+              <li class="mb-1 fs-6">Linguistic & Logical-mathematical intelligence</li>
+              <li class="mb-1 fs-6">Bodily-Kinesthetic, Musical & Naturalist intelligence</li>
+              <li class="mb-1 fs-6">Intrapersonal & Interpersonal intelligence (Emotional Intelligence)</li>
+            </p>
+          </div>
+        </div>
       </div>
+    
+    <br />
+    <div>
+      <h1 class="fs-3">On a more personal note</h1>
+      <h2 class="fs-5">A little about my soul</h2>
+      <p>
+        <li class="mb-1 fs-5">I'm part of the LGBTQI+ community</li>
+        <li class="mb-1 fs-5">I'm a feminist, anti-racist and activist</li>
+        <li class="mb-1 fs-5">I'm an ecologist and animalist</li>
+        <li class="mb-1 fs-5">I can't live without music and cinema</li>
+        <li class="mb-1 fs-5">Love gives me purpose</li>
+        <li class="mb-1 fs-5">Strong family values</li>
+
+
+      </p>
     </div>
 
     <div class="text-center">
-      <h1 class="recommendations">RECOMMENDATIONS</h1>
+      <h1 class="recommendations">WORK RECOMMENDATIONS</h1>
       <img
         class="my-1 work-image p-1 shadow rounded"
         src="/images/zoha-recommendation.png"
@@ -224,16 +301,24 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <button class="show-work shadow rounded">
-            <a href="contact.html" target="_self">Let's work together</a>
+          <button class="section-btn shadow rounded">
+            <a href="contact.html" target="_self">Let's work together!</a>
           </button>
         </div>
         <div class="col">
-          <button class="show-work shadow rounded">
+          <button class="section-btn shadow rounded">
             <a href="work.html" target="_self">More of my work</a>
           </button>
         </div>
       </div>
     </div>
+
+<!-- Event listeners for word definitions -->
+    <script>
+document.getElementById("inclusiveLanguage").addEventListener("click", function(event) {
+    event.preventDefault();
+    window.alert("You clicked!");
+  })
+    </script>
   </body>
 </html>
