--- a/contact.html
+++ b/contact.html
@@ -75,6 +75,57 @@
         </div>
       </div>
     </nav>
-    <h1 class="hero-margin">contact</h1>
+
+    <h1 class="hero-section">contact</h1>
+
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <button type="button" class="btn custom-btn">
+            <a
+              class="social-net"
+              target="_blank"
+              href="https://www.linkedin.com/in/paulinamarincruz/"
+              ><i class="fa-brands fa-linkedin"></i>
+            </a>
+          </button>
+        </div>
+        <div class="col">
+          <button type="button" class="btn custom-btn">
+            <a
+              class="social-net"
+              target="_blank"
+              href="https://www.facebook.com/paucruz5"
+              ><i class="fa-brands fa-facebook"></i>
+            </a>
+          </button>
+        </div>
+        <div class="col">
+          <button type="button" class="btn custom-btn">
+            <a
+              class="social-net"
+              target="_blank"
+              href="https://www.instagram.com/paucruz5/"
+              ><i class="fa-brands fa-instagram"></i>
+            </a>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <button class="section-btn shadow rounded">
+            <a href="work.html" target="_self">More of my work</a>
+          </button>
+        </div>
+        <div class="col">
+          <button class="section-btn shadow rounded">
+            <a href="about.html" target="_self">Get to know me</a>
+          </button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
