--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="col-md ms-5">
           <img
-            class="img-fluid mt-2 face-shot p-1 shadow rounded"
+            class="img-fluid mt-2 ms-5 face-shot p-1 shadow rounded"
             src="images/Paulina.png"
             alt="Paulina-faceshot"
             width="220"
@@ -227,18 +227,18 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <button class="show-work shadow rounded">
-            <a href="contact.html" target="_self">Let's work together</a>
+          <button class="section-btn shadow rounded">
+            <a href="contact.html" target="_self">Let's work together!</a>
           </button>
         </div>
         <div class="col">
-          <button class="show-work shadow rounded">
+          <button class="section-btn shadow rounded">
             <a href="work.html" target="_self">More of my work</a>
           </button>
         </div>
         <div class="col">
-          <button class="show-work shadow rounded">
-            <a href="about.html" target="_self">Get to know about me</a>
+          <button class="section-btn shadow rounded">
+            <a href="about.html" target="_self">Get to know me</a>
           </button>
         </div>
       </div>
