--- a/work.html
+++ b/work.html
@@ -75,6 +75,111 @@
         </div>
       </div>
     </nav>
-    <h1 class="hero-margin">work</h1>
+
+    <h1 class="hero-section text-center">Web Pages</h1>
+
+    <div class="container work-examples">
+      <div class="row my-5 justify-content-center">
+        <div class="col-lg text-end">
+          <img
+            src="images/women-poems.png"
+            alt="Web page that finds poems written by women"
+            width="440"
+            class="work-image p-1 shadow rounded"
+          />
+        </div>
+        <div class="col-lg text-start">
+          <div class="text-center text-lg-start">
+            <h3 class="title-page">POEM SEARCHER</h3>
+          </div>
+          <p class="justified-text-right">
+            Choose the theme of the poem, in any language you'd like and, using
+            AI, the searcher will show you a beautiful poem written by any woman
+            in the world.
+          </p>
+          <div class="page-button text-center text-lg-start">
+            <a
+              href="https://women-poems-searcher.netlify.app/"
+              target="_blank"
+              class="btn btn-link"
+              >Poem Searcher
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row my-5 justify-content-center">
+        <div class="col-lg text-end order-lg-0 order-1">
+          <div class="text-center text-lg-end">
+            <h3 class="title-page">WEATHER APP</h3>
+          </div>
+          <p class="justified-text-left">
+            Choose any city in the world and the searcher will show this week's
+            weather in that city. It also shows the weather, date and time of
+            your current location.
+          </p>
+          <div class="page-button text-center text-lg-end">
+            <a
+              href="https://weather-pc.netlify.app/"
+              target="_blank"
+              class="btn btn-link"
+              >Weather App
+            </a>
+          </div>
+        </div>
+        <div class="col-lg order-lg-1 order-0">
+          <img
+            src="images/weather-app.png"
+            alt="Web page that shows you the weather in any city"
+            width="430"
+            class="work-image p-1 shadow rounded"
+          />
+        </div>
+      </div>
+
+      <div class="row my-5 justify-content-center">
+        <div class="col-lg text-end">
+          <img
+            src="images/world-clock.png"
+            alt="Web page that shows the time of a few cities"
+            width="440"
+            class="work-image p-1 shadow rounded"
+          />
+        </div>
+        <div class="col-lg text-start">
+          <div class="text-center text-lg-start">
+            <h3 class="title-page">WORLD CLOCK</h3>
+          </div>
+          <p class="justified-text-right">
+            This searcher shows you the full date and time in a digital clock,
+            of nine default cities all around the world. One of those cities is
+            your current location.
+          </p>
+          <div class="page-button text-center text-lg-start">
+            <a
+              href="https://world-clock-pc.netlify.app/index.html"
+              target="_blank"
+              class="btn btn-link"
+              >World clock
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <button class="section-btn shadow rounded">
+            <a href="contact.html" target="_self">Let's work together!</a>
+          </button>
+        </div>
+        <div class="col">
+          <button class="section-btn shadow rounded">
+            <a href="about.html" target="_self">Get to know me</a>
+          </button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
