enlarge img when hover

--- a/work.html
+++ b/work.html
@@ -76,7 +76,7 @@
       </div>
     </nav>
 
-    <h1 class="hero-section text-center">Web Pages</h1>
+    <h1 class="hero-section text-center">🤓 Web pages made by me! 🤓</h1>
 
     <div class="container work-examples">
       <div class="row my-5 justify-content-center">
@@ -133,6 +133,7 @@
             alt="Web page that shows you the weather in any city"
             width="430"
             class="work-image p-1 shadow rounded"
+            id="weatherImage"
           />
         </div>
       </div>
