--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
             alt="Web page that finds poems written by women"
             width="440"
             class="work-image p-1 shadow rounded"
+            id="leftImage"
           />
         </div>
         <div class="col-lg text-start">
@@ -190,6 +191,7 @@
             alt="Web page that shows you the weather in any city"
             width="430"
             class="work-image p-1 shadow rounded"
+            id="rightImage"
           />
         </div>
       </div>
@@ -201,6 +203,7 @@
             alt="Web page that shows the time of a few cities"
             width="440"
             class="work-image p-1 shadow rounded"
+            id="leftImage"
           />
         </div>
         <div class="col-lg text-start">
