--- a/work.html
+++ b/work.html
@@ -86,6 +86,7 @@
             alt="Web page that finds poems written by women"
             width="440"
             class="work-image p-1 shadow rounded"
+            id="leftImage"
           />
         </div>
         <div class="col-lg text-start">
@@ -133,7 +134,7 @@
             alt="Web page that shows you the weather in any city"
             width="430"
             class="work-image p-1 shadow rounded"
-            id="weatherImage"
+            id="rightImage"
           />
         </div>
       </div>
@@ -145,6 +146,7 @@
             alt="Web page that shows the time of a few cities"
             width="440"
             class="work-image p-1 shadow rounded"
+            id="leftImage"
           />
         </div>
         <div class="col-lg text-start">
